--- a/src/styles/header/Header.module.scss
+++ b/src/styles/header/Header.module.scss
@@ -2,10 +2,12 @@
   width: 100%;
   background-color: #ffffff;
   height: 100px;
+
   .container {
     padding: 41px;
     display: flex;
     align-items: center;
+
     a {
       text-decoration: none;
       color: #141624;
@@ -19,6 +21,7 @@
       display: flex;
       gap: 9px;
       align-items: center;
+
       img {
         width: 36px;
         height: 36px;
@@ -52,10 +55,12 @@
 
         li {
           font-weight: 900;
+
           a {
             font-size: 16px;
           }
         }
+
         li:hover {
           transform: scale(1.2);
           transition: 20ms;
@@ -83,21 +88,65 @@
     .container {
       padding: 10px;
       gap: 40px;
+
       .logo {
+        width: 100%;
         transform: scale(1.1);
         transition: 1s;
+
         img {
           display: none;
         }
       }
+
       .navbar {
         display: none;
+
         ul {
           li {
             font-size: 13px;
           }
         }
       }
+
+      .search {
+        input {
+          width: 300px;
+          height: 28px;
+          transition: 1ms;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 964px) {
+  .header {
+    .container {
+      padding: 10px;
+      gap: 40px;
+
+      .logo {
+        transform: scale(1.1);
+        transition: 1s;
+
+        img {
+          display: none;
+        }
+      }
+
+      .navbar {
+        width: 80%;
+
+        ul {
+          gap: 10px;
+
+          li {
+            font-size: 13px;
+          }
+        }
+      }
+
       .search {
         input {
           width: 300px;
