--- a/src/styles/footer/Footer.module.scss
+++ b/src/styles/footer/Footer.module.scss
@@ -15,6 +15,7 @@
     padding-bottom: 32px;
     gap: 20px;
     flex-wrap: wrap;
+
     .about {
       max-width: 289px;
       width: 100%;
@@ -24,7 +25,8 @@
         margin-top: 24px;
         margin-bottom: 20px;
       }
-      h4{
+
+      h4 {
         display: flex;
         gap: 10px;
         margin-bottom: 3px;
@@ -62,18 +64,25 @@
   }
 }
 
+.hidden {
+  display: none;
+}
+
 
 @media (max-width :764px) {
   .container {
     flex-direction: column;
+
     .about {
       width: 100%;
       order: 3;
     }
+
     .link {
       order: 2;
       width: 100%;
     }
+
     .card {
       width: 100%;
     }
