--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,10 +2,12 @@
   margin: 0;
   padding: 0;
 }
+
 html {
   scroll-behavior: smooth
 }
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;1,300&display=swap');
 
 .inner-wrapper {
   max-width: 1992px;
